--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@automattic/vip": "^2.27.0",
-    "chalk": "^5.1.2",
-    "execa": "^6.1.0",
+    "@automattic/vip": "^2.28.2",
+    "chalk": "^5.2.0",
+    "execa": "^7.1.1",
+    "js-yaml": "^4.1.0",
     "log-symbols": "^5.1.0",
-    "meow": "^11.0.0"
+    "meow": "^12.0.1"
   }
 }
