--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@automattic/vip": "^2.28.2",
     "chalk": "^5.2.0",
     "execa": "^7.1.1",
+    "js-yaml": "^4.1.0",
     "log-symbols": "^5.1.0",
     "meow": "^12.0.1"
   }
